<resources>
    <string name="app_name">IM Chat</string>
    <string name="copyright">Copyright © 2018 Baige.All rights reserved.</string>
    <string name="navigation_settings">设置</string>
    <string name="navigation_personal_settings">个人设置</string>
    <string name="navigation_log">日志</string>
    <string name="navigation_about">关于</string>
    <string name="navigation_home">主页</string>
    <string name="navigation_logout">注销</string>
    <string name="navigation_return">退出</string>

    <string name="tab_one">Fish</string>
    <string name="tab_two">Fly</string>
    <string name="tab_three">Bird</string>
    <string name="tab_four">Coffee</string>

    <string name="tab_message">消息</string>
    <string name="tab_friends">好友</string>
    <string name="tab_file">文件</string>
    <string name="tab_person">个人</string>

    <string name="user_name">昵称</string>
    <string name="friend_alias">好友备注</string>
    <string name="email">email@163.com</string>
    <string name="chat_message">这是一条很长很长的消息这是一条很长很长的消息这是一条很长很长的消息这是一条很长很长的消息这是一条很长很长的消息</string>
    <string name="network">WIFI</string>
    <string name="input_hint">input</string>
    <string name="inform">This is an inform</string>

    <string name="input_type_digits">123456789qwertyuiopasdfghjklzxcvbnm</string>
    <string name="null_info">这里什么都没有</string>
    <string name="add_friend">添加好友</string>
    <string name="refresh">刷新</string>
    <string name="show_inform">显示通知</string>
    <string name="cancel_inform">取消通知</string>

    <string-array name="server_ip">
        <item>120.78.148.180</item>
        <item>120.79.203.153</item>
        <item>39.108.74.14</item>
        <item>192.168.1.100</item>
        <item>192.168.1.101</item>
        <item>192.168.1.102</item>
        <item>192.168.1.103</item>
        <item>192.168.1.104</item>
        <item>192.168.1.105</item>
        <item>其它</item>
    </string-array>

    <string-array name="slip_window_count_array">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>15</item>
        <item>18</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>

</resources>
