<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.baige.imchat.MainActivity">
    <group android:id="@+id/grp1">
        <item
            android:id="@+id/add_friend"
            android:icon="@drawable/ic_add_friends"
            android:title="@string/add_friend"/>
        <item
            android:id="@+id/refresh"
            android:icon="@drawable/ic_refresh2"
            android:title="@string/refresh"/>
    </group>

    <group android:id="@+id/grp2" >
        <item
            android:id="@+id/add_notify"
            android:icon="@drawable/ic_notify"
            android:title="@string/show_inform"/>
        <item
            android:id="@+id/cancel_notify"
            android:icon="@drawable/ic_cancel"
            android:title="@string/cancel_inform"/>
    </group>
</menu>
