<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.baige.view.CircleImageView
                android:id="@+id/img_user"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/head_img"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"/>
            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/email"
                android:textSize="18sp"
                android:textColor="@color/grass_dark"
                android:gravity="center"/>
        </LinearLayout>


        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout style="@style/new_alarm_clcok_item_llyt">

                    <LinearLayout
                        style="@style/new_alarm_clcok_item">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="19dp"
                            android:text="昵称"
                            android:textColor="@color/black_text_normal_common"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/txt_user_alias"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/user_name"
                            android:layout_marginRight="@dimen/fab_margin"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <View style="@style/divider_line"/>

                    <LinearLayout style="@style/new_alarm_clcok_item">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="19dp"
                            android:text="备注"
                            android:textColor="@color/black_text_normal_common"
                            android:textSize="16sp"/>

                        <EditText
                            android:id="@+id/edit_friend_alias"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="19dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawablePadding="5dp"
                            android:gravity="right"
                            android:inputType="text"
                            android:editable="false"
                            android:minLines="1"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"/>
                        <ImageButton
                            android:id="@+id/btn_edit_friend_alias"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/icon_edit_pen"
                            android:layout_gravity="center"
                            android:src="@drawable/selector_normal_bg"
                            android:layout_marginRight="@dimen/fab_margin"/>
                    </LinearLayout>

                    <View style="@style/divider_line"/>

                    <LinearLayout style="@style/new_alarm_clcok_item">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="19dp"
                            android:text="年龄"
                            android:textColor="@color/black_text_normal_common"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/txt_age"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="19dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawablePadding="5dp"
                            android:gravity="right"
                            android:inputType="text"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <View style="@style/divider_line"/>

                    <LinearLayout style="@style/new_alarm_clcok_item">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="19dp"
                            android:text="性别"
                            android:textColor="@color/black_text_normal_common"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/txt_sex"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="19dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawablePadding="5dp"
                            android:gravity="right"
                            android:inputType="text"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <View style="@style/divider_line"/>

                    <LinearLayout style="@style/new_alarm_clcok_item">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="19dp"
                            android:text="手机号码"
                            android:textColor="@color/black_text_normal_common"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/txt_phone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="19dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawablePadding="5dp"
                            android:gravity="right"
                            android:inputType="text"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <View style="@style/divider_line"/>
                    <LinearLayout style="@style/new_alarm_clcok_item">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="19dp"
                            android:text="已上传流量"
                            android:textColor="@color/black_text_normal_common"
                            android:textSize="16sp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/fab_margin"
                            android:gravity="center"
                            android:orientation="vertical">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:textColor="@color/text_color_green"
                                    android:text="136MB"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:textColor="@color/text_color_green"
                                    android:text="200MB"/>
                            </RelativeLayout>
                            <ProgressBar
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:progress="68"
                                android:max="100"/>
                        </LinearLayout>
                    </LinearLayout>

                    <View style="@style/divider_line"/>
                    <LinearLayout style="@style/new_alarm_clcok_item">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="19dp"
                            android:text="已下载流量"
                            android:textColor="@color/black_text_normal_common"
                            android:textSize="16sp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/fab_margin"
                            android:gravity="center"
                            android:orientation="vertical">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/text_color_green"
                                    android:text="50MB"
                                    android:layout_alignParentTop="true"
                                    android:layout_alignParentStart="true"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:textColor="@color/text_color_green"
                                    android:text="200MB"/>
                            </RelativeLayout>
                            <ProgressBar
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:progress="25"
                                android:max="100"/>
                    </LinearLayout>

                    <View style="@style/divider_line"/>


                </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_friend"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/selector_btn"
                    android:text="添加好友"
                    android:textColor="@color/white"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="@dimen/fab_margin"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/grass_dark"
                        android:text="@string/copyright"/>
                </LinearLayout>
            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</LinearLayout>
